changelog/v1.3.0/version-summary.md
<!-- @formatter:off -->
<!-- noinspection -->
<!-- Prevents auto format, for JetBrains IDE File > Settings > Editor > Code Style (Formatter Tab) > Turn formatter on/off with markers in code comments  -->

<!-- This file is automatically generate by logchange tool 🌳 🪓 => 🪵 -->
<!-- Visit https://github.com/logchange/logchange and leave a star 🌟 -->
<!-- !!! ⚠️ DO NOT MODIFY THIS FILE, YOUR CHANGES WILL BE LOST ⚠️ !!! -->


[1.3.0] - 2023-09-14
--------------------

### Dependency updates (14 changes)

- Upgraded actions/checkout from v3 to v4 (@marwin1991)
- Upgraded org.apache.commons:commons-text from 1.9 to 1.10.0 (@marwin1991)
- Upgraded org.apache.maven:maven-artifact from 3.9.3 to 3.9.4 (@marwin1991)
- Upgraded org.apache.maven:maven-core from 3.9.3 to 3.9.4 (@marwin1991)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.2 to 3.9.3 (@marwin1991)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.3 to 3.9.4 (@marwin1991)
- Upgraded org.apache.maven.plugin-tools:maven-plugin-annotations from 3.8.2 to 3.9.0 (@marwin1991)
- Upgraded org.pitest:pitest-maven from 1.14.2 to 1.14.3 (@marwin1991)
- Upgraded org.pitest:pitest-maven from 1.14.3 to 1.14.4 (@marwin1991)
- Upgraded org.projectlombok:lombok from 1.18.26 to 1.18.28 (@marwin1991)
- Upgraded renovatebot/github-action from v38.1.11 to v39.0.0 (@marwin1991)
- Upgraded renovatebot/github-action from v39.0.0 to v39.0.1 (@marwin1991)
- Upgraded renovatebot/github-action from v39.0.1 to v39.0.5 (@marwin1991)
- Migrated from org.yaml:snakeyaml 1.33 to jackson-dataformat-yaml 2.15.2 (@marwin1991)


