changelog/v1.4.0/version-summary.md
<!-- @formatter:off -->
<!-- noinspection -->
<!-- Prevents auto format, for JetBrains IDE File > Settings > Editor > Code Style (Formatter Tab) > Turn formatter on/off with markers in code comments  -->

<!-- This file is automatically generate by logchange tool 🌳 🪓 => 🪵 -->
<!-- Visit https://github.com/logchange/logchange and leave a star 🌟 -->
<!-- !!! ⚠️ DO NOT MODIFY THIS FILE, YOUR CHANGES WILL BE LOST ⚠️ !!! -->


[1.4.0] - 2024-03-02
--------------------

### Fixed (1 change)

- Resolved problem with translating update property in configurations section !230 #224 ([Matthew](https://github.com/witx98) @witx98)

### Dependency updates (36 changes)

- Upgraded actions/setup-java from v3 to v4 (@marwin1991)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.15.2 to 2.15.3 (@marwin1991)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.15.3 to 2.16.0 (@marwin1991)
- Upgraded com.fasterxml.jackson.core:jackson-databind from 2.16.0 to 2.16.1 (@marwin1991)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.15.2 to 2.15.3 (@marwin1991)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.15.3 to 2.16.0 (@marwin1991)
- Upgraded com.fasterxml.jackson.dataformat:jackson-dataformat-yaml from 2.16.0 to 2.16.1 (@marwin1991)
- Upgraded org.apache.commons:commons-text from 1.10.0 to 1.11.0 (@marwin1991)
- Upgraded org.apache.maven:maven-artifact from 3.9.4 to 3.9.5 (@marwin1991)
- Upgraded org.apache.maven:maven-artifact from 3.9.5 to 3.9.6 (@marwin1991)
- Upgraded org.apache.maven:maven-core from 3.9.4 to 3.9.5 (@marwin1991)
- Upgraded org.apache.maven:maven-core from 3.9.5 to 3.9.6 (@marwin1991)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.4 to 3.9.5 (@marwin1991)
- Upgraded org.apache.maven:maven-plugin-api from 3.9.5 to 3.9.6 (@marwin1991)
- Upgraded org.apache.maven.plugin-tools:maven-plugin-annotations from 3.9.0 to 3.10.2 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-failsafe-plugin from 3.1.2 to 3.2.2 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-failsafe-plugin from 3.2.2 to 3.2.5 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-javadoc-plugin from 3.5.0 to 3.6.0 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-javadoc-plugin from 3.6.0 to 3.6.2 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-javadoc-plugin from 3.6.2 to 3.6.3 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-plugin-plugin from 3.9.0 to 3.10.1 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-plugin-plugin from 3.10.1 to 3.10.2 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-surefire-plugin from 3.1.2 to 3.2.2 (@marwin1991)
- Upgraded org.apache.maven.plugins:maven-surefire-plugin from 3.2.2 to 3.2.5 (@marwin1991)
- Upgraded org.mockito:mockito-junit-jupiter from 5.4.0 to 5.11.0 (@marwin1991)
- Upgraded org.pitest:pitest-junit5-plugin from 1.2.0 to 1.2.1 (@marwin1991)
- Upgraded org.pitest:pitest-maven from 1.14.4 to 1.15.0 (@marwin1991)
- Upgraded org.pitest:pitest-maven from 1.15.0 to 1.15.1 (@marwin1991)
- Upgraded org.pitest:pitest-maven from 1.15.1 to 1.15.3 (@marwin1991)
- Upgraded org.projectlombok:lombok from 1.18.28 to 1.18.30 (@marwin1991)
- Upgraded qcastel/github-actions-maven-release from v1.12.39 to v1.12.41 (@marwin1991)
- Upgraded renovatebot/github-action from v39.0.5 to v39.1.0 (@marwin1991)
- Upgraded renovatebot/github-action from v39.1.0 to v39.1.2 (@marwin1991)
- Upgraded renovatebot/github-action from v39.1.2 to v39.1.3 (@marwin1991)
- Upgraded renovatebot/github-action from v39.1.3 to v39.2.3 (@marwin1991)
- Upgraded renovatebot/github-action from v39.2.3 to v39.2.4 (@marwin1991)


